hub server MDL-25043 fix css issue with form warpping even though there is more white spaces available

--- a/styles.css
+++ b/styles.css
@@ -302,3 +302,11 @@
     font-weight:bold;
     cursor: pointer;
 }
+
+#page-site-index .mform .fitem .felement {
+    margin-left: 150px;
+}
+
+#page-site-index .mform .fitem .fitemtitle {
+    width: 140px;
+}
